@startuml

'Interfacce utente
interface MainWindow{
    -app : Applicazione

    +apriDiario() : void
}

interface FinestraDiario{
    -gestDiario : GestoreDiario

    +apriPagina() : void
}

interface FinestraPagina{
    -gestPagina : GestorePagina
}

'Classi di gestione dati x interfacce
class Applicazione{
    -diari : ListaDiari
    -numeroDiari : int

    'Inizializza la lista diari tramite classe Salva
    +Applicazione()

    +aggiungiDiario(nome: string, passwordAttiva: bool, dataCreazione: DateTime) : void
    +rimuoviDiario(nome: string) : void

    +getDiari() : Lista<InfoDiario> copia

    'Metodi per salvataggio su disco
    +salvaListaDiari() : void
    +leggiListaDiari() : void
}

class GestoreDiario{
    -infoDiario : InfoDiario
    -diario : Diario
    -numeroPagine : int

    'Inizializza il diario
    +GestoreDiario(infoDiario: InfoDiario)

    +setNome(nome: string) : void
    +aggiungiPagina(pagina: InfoPagina) : void
    +rimuoviPagina(pagina: InfoPagina) : void
    +setPassword(password: string, nuovaPassword: string) : void

    +validaDiario(password: string) : void
    +isValidato() : bool

    'Metodi per salvataggio su disco
    +salvaDiario() : void
    +leggiDiario() : void
}

class GestorePagina{
    -infoPagina : InfoPagina
    -pagina : Pagina

    'Inizializza la pagina
    +GestorePagina()

    +setContenuto(contenuto: string) : void

    +aggiungiAllegato(percorso: string) : void
    +rimuoviAllegato(percorso: string) : void

    +getContenuto() : string
    +getAllegati() : List<string>

    'Metodi per salvataggio su disco
    +salvaPagina() : void
    +leggiPagina() : void
}

'Strutture dati
class ListaDiari{
    -diari : List<InfoDiario>

    +ListaDiari(diari: List<InfoDiario>) : void

    +getDiari() : List<InfoDiario>
}

class InfoDiario{
    -percorso : stirng
    -numeroDiario : int
    -passwordAttiva : bool
    -dataCreazione : Date
    #nome : string

    +InfoDiario(percorso: string, numeroDiario: int, passwordAttiva: bool, nome: string, dataCreazione: Date)

    +getPercorso() : string
    +getNumeroDiario() : int
    +getDataCreazione() : Date
    +getNome() : string

    +isPasswordAttiva() : bool
}

class Diario extends InfoDiario{
    -pagine : List<InfoPagina>
    
    -password : string
    -diarioVaidato : bool

    +Diario(diario: InfoDiario, password: string, pagine: List<InfoPagina>)

    'setter
    +setNome(nome: string) : void
    +setPassword(password: string, nuovaPassword: string) : void

    'getter
    +getPagine() : List<InfoPagine>

    'sicurezza
    +validaDiario(password: string) : void
    +isValidato() : bool
}

class InfoPagina{
    -percorso : stirng
    -numeroPagina : int
    -dataPagina : Date

    +InfoPagina(percorso: string, numeroPagina: int, dataPagina: Date)
    +getPercorso() : string
    +getNumeroPagina() : int
    +getDataPagina() : Date
}

class Pagina extends InfoPagina{
    -contenuto : string
    -allegati : List<string>

    +Pagina(pagina: InfoPagina, contenuto: string, allegati: List<string>)

    'setter
    +setDataPagina(dataPagina: Date) : void
    +setContenuto(contenuto: string) : void

    'getter
    +getContenuto() : string
    +getAllegati() : List<string>
}

'Traduttori e salvataggio dati
class Traduci{
    +diariToFile(diari: ListaDiari) : string
    +fileToDiari(file: string) : ListaDiari

    +diarioToFile(diario: Diario) : string
    +fileToDiario(file: string, infoDiario: InfoDiario) : Diario

    +paginaToFile(pagina: Pagina) : string
    +fileToPagina(file: string, infoPagina: InfoPagina) : Pagina
}

class Salva{
    +salvaDiari(diari: ListaDiari, percorso: string) : void
    +leggiDiari(percorso: string) : ListaDiari

    +salvaDiario(diario: Diario) : void
    +leggiDiario(infoDiario: InfoDiario) : Diario

    +salvaPagina(pagina: Pagina) : void
    +leggiPagina(infoPagina: InfoPagina) : Pagina

    +eliminaDiario(diario: InfoDiario) : void
    +eliminaPagina(pagina: InfoPagina) : void
}

'Interazioni tra interfacce
MainWindow --> FinestraDiario : apre
FinestraDiario --> FinestraPagina : apre

'Interazioni con interfacce
MainWindow --> Applicazione : interagisce
FinestraDiario --> GestoreDiario : interagisce
FinestraPagina --> GestorePagina : interagisce

'Relazioni finestre-gestori
Applicazione "1" *-- "1" ListaDiari : ha
GestoreDiario "1" *-- "1" Diario : ha
GestorePagina "1" *-- "1" Pagina : ha

'Relazioni gestori-salvataggio
Applicazione --> Salva : int.
GestoreDiario --> Salva : int.
GestorePagina --> Salva : int.

'Relazione salvataggio-traduzione
Salva --> Traduci : int.

'Relazioni strutture dati
ListaDiari "1" *-- "0..*" InfoDiario : ha
Diario "1" *-- "0..*" InfoPagina : ha

@enduml
